<resources>
    <string name="app_name">Tip Calculator</string>
    <string name="title_activity_tip_calculator">Tip Calculator</string>
    <string name="menu_settings">Settings</string>

    <string name="bill_amount_label">Bill Amount</string>
    <string name="bill_amount"></string>

    <string name="tip_percent_label">Percent</string>
    <string name="tip_percent">15%</string>
    <string name="increase">+</string>
    <string name="decrease">-</string>
    
    <string name="tip_amount_label">Tip</string>
    <string name="tip_amount">$0.00</string>

    <string name="total_amount_label">Total</string>
    <string name="total_amount">$0.00</string>
    
    <string name="rounding">Rounding</string>
    <string name="none">None</string>
    <string name="tip">Tip</string>
    <string name="total">Total</string>
    <string name="split">Split?</string>

    <string name="split_label">Split Bill?</string>        
    <string-array name="split_array">
        <item >No</item>
        <item >2 ways</item>
        <item >3 ways</item>
        <item >4 ways</item>
    </string-array>
        
    <string name="split_amount_label">Per Person</string>
    <string name="split_amount">$0.00</string>
    
    <string name="apply">Apply</string>
    
</resources>